--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!--
- * @Author: xiaoning.li@inossem.com
- * @Date: 2022-07-27 13:41:19
- * @LastEditors: xiaoning.li@inossem.com
- * @LastEditTime: 2022-07-28 17:38:18
- * @Description: 
--->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -19,7 +12,8 @@
         <script>
             const validate = toolsJs.validate
             const typeCheck = toolsJs.typeCheck
-            console.log(typeCheck.isString([]))
+            console.log(typeCheck.isString())
+            console.log(toolsJs.validate.maskmobile('17395203391'))
         </script>
     </body>
 </html>
