--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="./dist/bundle.js"></script>
+        <script src="./dist/toolsJs.umd.js"></script>
         <title>toolsJs</title>
     </head>
     <body>
