feat: 优化打包配置 区分环境

--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
  * @Author: xiaoning.li@inossem.com
  * @Date: 2022-08-05 18:21:24
  * @LastEditors: xiaoning.li@inossem.com
- * @LastEditTime: 2022-08-30 17:31:37
+ * @LastEditTime: 2022-09-06 10:40:50
  * @Description: 
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./dist/toolsJs.umd.js"></script>
-    <title>toolsJs</title>
-  </head>
-  <body>
-    <h1>ToolsJs</h1>
-    <script lang="ts">
-      // const validate = toolsJs.validate
-      // const typeCheck = toolsJs.typeCheck
-      console.log(toolsJs)
-      //   console.log(toolsJs.validate.maskmobile('17395203391'))
-      // console.log(toolsJs.validate.getKebabCase('getName'))
-      // console.log(toolsJs.validate.getCamelCase('get-name'))
-    </script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="./lib/bundle.umd.js"></script>
+        <title>toolsJs</title>
+    </head>
+    <body>
+        <h1>ToolsJs</h1>
+        <script lang="ts">
+            // const validate = toolsJs.validate
+            // const typeCheck = toolsJs.typeCheck
+            console.log(toolsJs.isArray(''))
+            //   console.log(toolsJs.validate.maskmobile('17395203391'))
+            // console.log(toolsJs.validate.getKebabCase('getName'))
+            // console.log(toolsJs.validate.getCamelCase('get-name'))
+        </script>
+    </body>
 </html>
